modification for new file names

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <title>Google</title>
         <link rel="stylesheet" type="text/css" href="reset.css">
-        <link rel="stylesheet" type="text/css" href="styleV2.css">
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
 
     <!--Body-->
